# safe-door

./: .cvsignore  .hgignore  ChangeLog  FILE_ID.DIZ.in  INSTALL.in  Makefile  Makefile.global.in  README  config.h.in  configure  configure.in
examples/: Makefile  safe-config  safeopen.ans  safeopen.asc  safewel.ans  safewel.asc
src/: .cvsignore  Makefile  safe-door.c  safe-door.h  safe-tool.c  safe-tool.h
