dnl Process this file with autoconf to produce a configure script.
dnl $Id$

AC_INIT(src/safe-door.h)
AM_CONFIG_HEADER(config.h)
SUBDIRS="examples src"
AC_SUBST(SUBDIRS)

dnl General settings for Safe Cracker Door.
dnl After changeing the version number, run autoconf!
PACKAGE="safe-door"
VERSION="0.0.0"
COPYRIGHT="Copyright (C) 2003 Michiel Broek, All Rights Reserved"
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(COPYRIGHT)
AC_PREFIX_DEFAULT(/usr/local)
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_DEFINE_UNQUOTED(COPYRIGHT, "$COPYRIGHT")
TARGET="$target"


dnl Checks for programs.
AC_PROG_CC
dnl Try to find GNU install
AC_CHECK_PROG(INSTALL, ginstall, ginstall)
AC_CHECK_PROG(INSTALL, install, install)
dnl AC_PROG_MAKE_SET
AC_CHECK_PROG(TAR, tar, tar)
CFLAGS="$CFLAGS -Wall -Wshadow -Wwrite-strings -Wstrict-prototypes"

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for doorlib
AC_CHECK_LIB(door,door_clear,result=yes,result=no)
if test "$result" = "yes"; then
  LIBS="$LIBS -ldoor"
  AC_CHECK_HEADERS(doorlib.h)
fi

AC_OUTPUT(
	Makefile.global
	FILE_ID.DIZ
)

